// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberBox Component should render active class name when isMultipliable 1`] = `
<li
  className="grid-item active "
  onClick={[MockFunction]}
  onKeyDown={[MockFunction]}
  role="button"
  tabIndex="0"
>
  10
</li>
`;

exports[`NumberBox Component should render selected class name when isSelected 1`] = `
<li
  className="grid-item  selected"
  onClick={[MockFunction]}
  onKeyDown={[MockFunction]}
  role="button"
  tabIndex="0"
>
  10
</li>
`;

exports[`NumberBox Component should render snapshot with default props 1`] = `
<li
  className="grid-item  "
  onClick={[MockFunction]}
  onKeyDown={[MockFunction]}
  role="button"
  tabIndex="0"
>
  10
</li>
`;
